Bettering/fixing spacing on About page

--- a/css/about.css
+++ b/css/about.css
@@ -344,7 +344,7 @@
   }
   
   .loves {
-    height: 520px;
+    height: 500px;
     margin-top: 80px;
     margin-bottom: 80px;
     background-color: #f6f8f9;
